k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  labels:
    app: headscale
spec:
  selector:
    app: headscale
  ports:
  - name: http
    targetPort: http
    port: 8080
